FIX TOOLBAR BUTTON ALIGNMENT

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -309,6 +309,7 @@ a.unstyled {
 #toolbar {
 	bottom: 0;
 	height: 5em;
+	line-height: 0;
 	position: sticky;
 	color: var(--grey);
 	background-color: white;
